--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,67 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+body {
+  font-family: 'Arial', sans-serif;
+  background-color: black;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+}
+
+.container {
+  width: 400px;
+  margin-top: 50px;
+}
+
+h1 {
   text-align: center;
+  color:white;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+input {
+  width: 100%;
+  padding: 8px;
+  box-sizing: border-box;
+  margin-bottom: 16px;
+  color: black;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+/* App.css */
+
+.app-container {
+  font-family: 'Arial', sans-serif;
+  background-color: #000; /* Black background */
+  padding: 20px;
+
+
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.task-list {
+  list-style-type: none;
+  padding: 0;
+  
+}
+.task-text{
+  color: white;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.task-item {
+  margin-bottom: 10px;
+  padding: 8px;
+  border: 1px solid whitesmoke;
+  background-color: #000;
+  color:white ; /* Set the text color to black */
+  cursor: pointer;
 }
 
-.card {
-  padding: 2em;
+.task-item:hover {
+  background-color: #f0f0f0;
 }
 
-.read-the-docs {
-  color: #888;
+.delete-button{
+background-color: red;
+}
+
+.completed {
+  text-decoration: line-through;
+  color: blue; /* Color for completed tasks */
 }
